<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="370dp"
        android:layout_height="614dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/view_widget_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/textTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/course_information"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCourseTitle"
        style="@style/editTextStyled"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/edit_text_rectangle"
        android:ems="10"
        android:hint="@string/course_title"
        android:inputType="textPersonName"
        android:textColorHint="#B9CFF1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCourseStart"
        style="@style/editTextStyled"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_rectangle"
        android:ems="10"
        android:hint="@string/start_date"
        android:inputType="date"
        android:textColorHint="#B9CFF1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseTitle" />

    <EditText
        android:id="@+id/editTextCourseEnd"
        style="@style/editTextStyled"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_rectangle"
        android:ems="10"
        android:hint="@string/end_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#B9CFF1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseStart" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/select_course_status"
        android:textColor="@color/scheduler_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseEnd" />

    <Spinner
        android:id="@+id/spinnerCourseStatus"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:autofillHints="@string/status"
        android:backgroundTint="#057db5"
        android:gravity="center|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/select_associated_term"
        android:textColor="@color/scheduler_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCourseStatus" />

    <Spinner
        android:id="@+id/spinnerAssociatedTerm"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#057DB5"
        android:gravity="center|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <EditText
        android:id="@+id/editTextNotes"
        style="@style/editTextStyled"
        android:layout_width="280dp"
        android:layout_height="105dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_rectangle"
        android:ems="10"
        android:gravity="center|top"
        android:hint="@string/notes"
        android:inputType="textMultiLine"
        android:paddingTop="10dp"
        android:textColorHint="#B9CFF1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAssociatedTerm" />

    <View
        android:id="@+id/view5"
        android:layout_width="370dp"
        android:layout_height="298dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/view_widget_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView9"
        style="@style/textTitleStyle"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="672dp"
        android:text="@string/instructor_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextInstructorName"
        style="@style/editTextStyled"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:height="48dp"
        android:background="@drawable/edit_text_rectangle"
        android:ems="10"
        android:hint="@string/instructor_name"
        android:inputType="textPersonName"
        android:textColorHint="#B9CFF1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editTextInstructorPhone"
        style="@style/editTextStyled"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_rectangle"
        android:ems="10"
        android:hint="@string/instructor_phone"
        android:inputType="phone"
        android:textColorHint="#B9CFF1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInstructorName" />

    <EditText
        android:id="@+id/editTextInstructorEmail"
        style="@style/editTextStyled"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_rectangle"
        android:ems="10"
        android:hint="@string/instructor_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#B9CFF1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInstructorPhone" />

    <View
        android:id="@+id/view6"
        android:layout_width="370dp"
        android:layout_height="342dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/view_widget_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/textView10"
        style="@style/textTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/associated_assessments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAssociatedAssessments"
        android:layout_width="298dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddAssessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/buttonAddAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/add_assessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/buttonSaveCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6"
        app:layout_constraintVertical_bias="0.092" />

</androidx.constraintlayout.widget.ConstraintLayout>