<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="-22dp"
    tools:layout_editor_absoluteY="0dp">

    <View
        android:id="@+id/view7"
        style="s"
        android:layout_width="369dp"
        android:layout_height="502dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/view_widget_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        style="@style/textTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/assessment_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAssessmentTitle"
        style="@style/editTextStyled"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/edit_text_rectangle"
        android:ems="10"
        android:hint="@string/assessment_title"
        android:inputType="textPersonName"
        android:textColorHint="#B9CFF1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAssessmentStart"
        style="@style/editTextStyled"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_rectangle"
        android:ems="10"
        android:hint="@string/start_date"
        android:inputType="date"
        android:textColorHint="#B9CFF1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAssessmentTitle" />

    <EditText
        android:id="@+id/editTextAssessmentEnd"
        style="@style/editTextStyled"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_rectangle"
        android:ems="10"
        android:hint="@string/end_date"
        android:inputType="date"
        android:textColorHint="#B9CFF1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAssessmentStart" />

    <Spinner
        android:id="@+id/spinnerAssessmentType"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:autofillHints="Please select"
        android:backgroundTint="#057db5"
        android:backgroundTintMode="src_in"
        android:foregroundGravity="center|center_horizontal"
        android:gravity="center|center_horizontal"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Spinner
        android:id="@+id/spinnerAssociatedCourse"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#057db5"
        android:foregroundGravity="center|center_horizontal"
        android:gravity="center|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/buttonSaveAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/select_assessment_type"
        android:textColor="@color/scheduler_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAssessmentEnd" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="268dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/assessment_associated_course"
        android:textColor="@color/scheduler_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAssessmentType" />

</androidx.constraintlayout.widget.ConstraintLayout>